Fix conflict CSS from UICore V3 that adds extra paddings to diff rows (#2027)

--- a/web/src/components/DiffViewer/DiffViewer.module.scss
+++ b/web/src/components/DiffViewer/DiffViewer.module.scss
@@ -34,6 +34,12 @@
   min-height: 36px;
 
   :global {
+    th,
+    td {
+      padding-top: 0;
+      padding-bottom: 0;
+    }
+
     .d2h-wrapper > div {
       margin-bottom: 0;
     }
